--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -10,43 +10,46 @@
         android:id="@+id/e_summit_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="70dp"
+        android:src="@drawable/ic_esummit"
+        app:layout_constraintBottom_toTopOf="@+id/e_summit_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="80dp"
-        android:src="@drawable/ic_esummit"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/e_summit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/e_summit_19"
-        android:textStyle="bold"
-        android:textSize="40sp"
         android:textColor="#000"
-        app:layout_constraintTop_toBottomOf="@+id/e_summit_icon"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/e_summit_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/e_summit_icon" />
 
     <TextView
         android:id="@+id/e_summit_date"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_bold"
-        android:padding="5dp"
         android:text="@string/e_summit_detail"
-        android:textSize="18sp"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/e_summit_text" />
 
-    <android.support.v7.widget.RecyclerView
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/e_summit_date"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/e_summit_date" />
 
 </android.support.constraint.ConstraintLayout>
