--- a/app/src/main/res/layout/es_stack_item.xml
+++ b/app/src/main/res/layout/es_stack_item.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:textAlignment="center"
-        android:textSize="32sp"/>
+        android:textSize="32sp"
+        android:textColor="@color/aboutusText"/>
 
 </LinearLayout>
