--- a/app/src/main/res/layout/fragment_aim.xml
+++ b/app/src/main/res/layout/fragment_aim.xml
@@ -37,9 +37,7 @@
                 android:id="@+id/aim_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:breakStrategy="simple"
                 android:fontFamily="@font/noto_sans_bold"
-                android:justificationMode="inter_word"
                 android:padding="10dp"
                 android:text="@string/about_us_aim"
                 android:textColor="@color/aboutusText"
@@ -58,7 +56,7 @@
                 android:padding="20dp"
                 android:text="@string/vision_text"
                 android:textAlignment="textEnd"
-                android:textColor="@color/aboutusHeading"
+                android:textColor="@color/aboutUsHeading"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
